<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_log"
    tools:context=".LoginScene">


    <Button
        android:id="@+id/PlayOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="105dp"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="24dip"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginScreenUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter a Username:"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false" />

    <EditText
        android:id="@+id/loginScreenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginScreenUserName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Enter a Password:"/>


</RelativeLayout>
